<resources>
    <string name="app_name">MedCare</string>

    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="sec_question">
        <item>Select a Security Question</item>
        <item>What is your mother\'s maiden name?</item>
        <item>What is your favourite food?</item>
        <item>What city were you born in?</item>
        <item>What is the name of the road you grew up on?</item>
    </string-array>
    <string name="password_recovery">Recover your password</string>
    <string name="hint_email">Email</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="forgot_password_msg">Put your registered Email Address to receive password reset instructions.</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="text_full_name">Full Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_age">Age</string>
    <string name="hint_answer">Answer</string>
    <string name="text_register">Register</string>
    <string name="text_have_account">Already Registered? Click here</string>
    <string name="text_login">User Login</string>
    <string name="text_forgot_password">Forgot Password? Click here</string>
    <string name="text_no_account">Not Yet Registered? Click here</string>
    <string name="hint_enter_a_message">Enter a Message</string>
    <string name="title_activity_home_page">MedCare Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">MedCare Home</string>
    <string name="menu_services">Services</string>
    <string name="menu_about">About</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_exit">Exit</string>
    //
    <string name="menu_send">Sen</string>
    <string name="menu_share">Share</string>
    <string name="about_med_desc"> MedCare is an Artificial Intelligent system that offers rich support to users.\nMedCare offers online assistance through a rich one on one interaction with users and it provides FIRST AID or immediate relief to users having considered their symptoms. When cases are critical, the system refers users to an online Doctor who will have a conversation with the users beyond the help that the robot can offer.</string>
    <string name="about_med_howitworks">MedCare is a health Chatbot that coaches people through tough times to build resilience, hy having text message coversations-in the same way as a Therapist would. \nStart a conversation with MedCare by sending any message in response to the initial displayed message.\n Much like a Therapist, MedCare gives a brief introduction, and then works to understand your needs by simply asking, "how are you". MedCare observes with care in order to deliver coping strategies, and which adapt to the emotions and concerns your condition</string>
    <string name="service_desc">MedCare answers medical and health questions for consumers and doctors instantly. The answers are provided by an inttelligent Super-Computer that learns about medicine everyday and over time about your health record and medical history. The idea behind cognitive computing or artificial intelligence, is that our computer learns by doing, getting at its task better over time by crunching more medical information. That iterative process of ingesting more information is what makes MedCare Powerful in the medical field</string>
    <string name="service_availability_desc">MedCare is available 24/7 and accessable by any cell phone, from any Location in the world.</string>
    <string name="menu_chat_history">Chat History</string>
    <string name="menu_botchat_history">Chat History with Chatbot</string>
    <string name="text_chat_doc">Chat with Doctor</string>

</resources>
