<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".user.Register">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       >
       <ImageView
           android:layout_alignParentTop="true"
           android:layout_width="100dp"
           android:layout_height="100dp"
           android:id="@+id/reg_logo"
           android:src="@drawable/logo"
           android:layout_marginTop="10dp"
           android:layout_centerHorizontal="true"
           />
       <RelativeLayout
           android:layout_margin="11dp"
           android:background="@drawable/border_white"
           android:layout_below="@id/reg_logo"
           android:id="@+id/inner_lay"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           >
           <com.google.android.material.textfield.TextInputLayout
               android:layout_marginTop="5dp"
               android:id="@+id/reg_label_name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/text_full_name"
               android:layout_alignParentTop="true"
               android:background="@drawable/btn_login_bg"
               android:textColorHint="@android:color/holo_blue_dark"
               >

               <EditText
                   android:id="@+id/reg_name"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textAlignment="textStart"
                   android:padding="3dp"
                   android:inputType="textCapWords"
                   android:imeOptions="actionNext"
                   />

           </com.google.android.material.textfield.TextInputLayout>



           <com.google.android.material.textfield.TextInputLayout
               android:layout_marginTop="5dp"
               android:id="@+id/reg_label_email"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_email"
               android:layout_below="@id/reg_label_name"
               android:background="@drawable/btn_login_bg"
               android:textColorHint="@android:color/holo_blue_dark"
               >

               <EditText
                   android:id="@+id/reg_email"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textAlignment="textStart"
                   android:padding="3dp"
                   android:inputType="textEmailAddress"
                   android:imeOptions="actionNext"
                   />

           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/reg_label_password"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_password"
               android:background="@drawable/btn_login_bg"
               android:layout_marginTop="5dp"
               android:layout_below="@id/reg_label_email"
               android:textColorHint="@android:color/holo_blue_dark"
               >

               <EditText
                   android:id="@+id/reg_password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textAlignment="textStart"
                   android:padding="3dp"
                   android:inputType="textPassword"
                   android:imeOptions="actionNext"
                   />

           </com.google.android.material.textfield.TextInputLayout>
           <TextView
               android:layout_marginTop="-6dp"
               android:layout_centerHorizontal="true"
               android:layout_below="@id/reg_label_password"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Password must be greater than 6 characters"
               android:textColor="@android:color/white"
               android:textStyle="italic|bold"
               android:textAlignment="center"
               android:id="@+id/password_instruction"
               />

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/reg_label_cpassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_confirm_password"
               android:background="@drawable/btn_login_bg"
               android:layout_marginTop="2dp"
               android:layout_below="@id/password_instruction"
               android:textColorHint="@android:color/holo_blue_dark"
               >

               <EditText
                   android:id="@+id/reg_cpassword"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textAlignment="textStart"
                   android:padding="3dp"
                   android:inputType="textPassword"
                   android:imeOptions="actionNext"
                   />

           </com.google.android.material.textfield.TextInputLayout>


           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/reg_label_phone"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_phone_number"
               android:background="@drawable/btn_login_bg"
               android:layout_marginTop="5dp"
               android:layout_below="@id/reg_label_cpassword"
               android:textColorHint="@android:color/holo_blue_dark"
               >

               <EditText
                   android:id="@+id/reg_phone"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textAlignment="textStart"
                   android:padding="3dp"
                   android:inputType="phone"
                   android:imeOptions="actionNext"
                    />

           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:layout_marginTop="5dp"
               android:id="@+id/reg_label_age"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:hint="@string/hint_age"
               android:layout_below="@id/reg_label_phone"
               android:background="@drawable/btn_login_bg"
               android:textColorHint="@android:color/holo_blue_dark"
               >

               <EditText
                   android:id="@+id/reg_age"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textAlignment="textStart"
                   android:padding="3dp"
                   android:ems="5"
                   android:inputType="number"
                   android:imeOptions="actionNext"
                   />

           </com.google.android.material.textfield.TextInputLayout>


           <Spinner
               android:id="@+id/reg_gender"
               android:padding="10dp"
               android:background="@drawable/btn_login_bg"
               android:layout_marginTop="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_below="@id/reg_label_phone"
               android:layout_toEndOf="@id/reg_label_age"
               android:entries="@array/gender"
               />

           <Spinner
               android:layout_marginTop="5dp"
               android:padding="10dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/reg_sec_question"
               android:layout_below="@id/reg_label_age"
               android:entries="@array/sec_question"
               android:background="@drawable/btn_login_bg"
               />


           <com.google.android.material.textfield.TextInputLayout
               android:layout_marginTop="5dp"
               android:id="@+id/reg_label_sec_answer"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_answer"
               android:layout_below="@id/reg_sec_question"
               android:background="@drawable/btn_login_bg"
               android:textColorHint="@android:color/holo_blue_dark"
               >

               <EditText
                   android:id="@+id/reg_sec_answer"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textAlignment="textStart"
                   android:padding="3dp"
                   android:ems="5"
                   android:inputType="textCapWords"
                   android:imeOptions="actionDone"
                   />

           </com.google.android.material.textfield.TextInputLayout>


       </RelativeLayout>
       <Button
           android:layout_marginTop="20dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/reg_button"
           android:layout_marginEnd="20dp"
           android:layout_marginStart="20dp"
           android:text="@string/text_register"
           android:textStyle="bold"
           android:textSize="20sp"
           android:textColor="@color/colorWhite"
           android:background="@drawable/border_white"
           android:layout_below="@id/inner_lay"

           />
       <TextView
           android:layout_marginTop="5dp"
           android:textSize="18sp"
           android:id="@+id/tv_no_account"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:text="@string/text_have_account"
           android:layout_below="@id/reg_button"
           />
       <TextView
           android:layout_marginTop="5dp"
           android:textSize="15sp"
           android:id="@+id/tv_reg_error"
           android:textColor="@android:color/holo_red_dark"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:layout_below="@id/tv_no_account"
           android:layout_marginBottom="20dp"
           />
   </RelativeLayout>


</ScrollView>